--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.14.1",
     "browser-sync": "^2.11.1",
     "client-sessions": "^0.8.0",
+    "clipboard": "^2.0.8",
     "cross-spawn": "^7.0.2",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
